--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,12 @@ MarkupSafe==3.0.2
 matplotlib==3.10.0
 numpy==2.2.2
 packaging==24.2
+pandas==2.2.3
 pillow==11.1.0
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
+pytz==2025.1
 six==1.17.0
+tzdata==2025.1
 waitress==3.0.2
 Werkzeug==3.1.3
